RESOLVED FIXED235667
REGRESSION(r288623) MSVC reports "InspectorDOMAgent.cpp(558,40): error C2059: syntax error: ':'"
https://bugs.webkit.org/show_bug.cgi?id=235667
Summary REGRESSION(r288623) MSVC reports "InspectorDOMAgent.cpp(558,40): error C2059:...
Fujii Hironori
Reported 2022-01-26 13:15:13 PST
REGRESSION(r288623) MSVC reports "InspectorDOMAgent.cpp(558,40): error C2059: syntax error: ':'" C:\cygwin\worker\win10-release\build\Source\WebCore\inspector/agents/InspectorDOMAgent.cpp(558,40): error C2059: syntax error: ':' (compiling source file C:\cygwin\worker\win10-release\build\WebKitBuild\Release\DerivedSources\WebCore\unified-sources\UnifiedSource-84c9f43f-5.cpp) [C:\cygwin\worker\win10-release\build\WebKitBuild\Release\Source\WebCore\WebCore.vcxproj] C:\cygwin\worker\win10-release\build\Source\WebCore\inspector/agents/InspectorDOMAgent.cpp(663,64): error C2059: syntax error: ':' (compiling source file C:\cygwin\worker\win10-release\build\WebKitBuild\Release\DerivedSources\WebCore\unified-sources\UnifiedSource-84c9f43f-5.cpp) [C:\cygwin\worker\win10-release\build\WebKitBuild\Release\Source\WebCore\WebCore.vcxproj]
Attachments
Patch for landing (2.19 KB, patch)
2022-01-26 13:18 PST, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2022-01-26 13:18:31 PST
Created attachment 450059 [details] Patch for landing
EWS
Comment 2 2022-01-26 14:36:58 PST
Committed r288646 (246455@main): <https://commits.webkit.org/246455@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 450059 [details].
Radar WebKit Bug Importer
Comment 3 2022-01-26 14:37:19 PST
Antoine Quint
Comment 4 2022-01-27 03:46:13 PST
Sorry about this and thanks for fixing!
Note You need to log in before you can comment on or make changes to this bug.