REGRESSION(r288623) MSVC reports "InspectorDOMAgent.cpp(558,40): error C2059: syntax error: ':'" https://bugs.webkit.org/show_bug.cgi?id=235667

Unreviewed build fix.


* inspector/agents/InspectorDOMAgent.cpp:
(WebCore::InspectorDOMAgent::pushStyleableElementToFrontend):
(WebCore::InspectorDOMAgent::pushStyleablePathToFrontend):
Don't use GNU extension `?:`.



Canonical link: https://commits.webkit.org/246455@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288646 268f45cc-cd09-0410-ab3c-d52691b4dbfc